gen/GraphicaParser.java
// Generated from D:/Universidad/Lenguajes/IntroANTLR/LDP_ProyectoFinal/grammar/GraphicaParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GraphicaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		From=1, Import=2, Graphica=3, New=4, Basic=5, Objects=6, Begin=7, Graph=8, 
		Coordinates=9, Obj_Circle=10, Fill=11, RGB=12, Stroke=13, FillType=14, 
		IStyle=15, Circle=16, Rectangle=17, Square=18, Ellipse=19, Line=20, Polyline=21, 
		Draw=22, L_Paren=23, R_Paren=24, L_Curly=25, R_Curly=26, Comma=27, Period=28, 
		Semicolon=29, Assign=30, Quote=31, NL=32, WS=33, COMMENT=34, LINE_COMMENT=35, 
		Integer=36, Double=37, ID=38;
	public static final int
		RULE_sourceFile = 0, RULE_importStatements = 1, RULE_libraries = 2, RULE_lib = 3, 
		RULE_initialize = 4, RULE_canvas = 5, RULE_point = 6, RULE_sentences = 7, 
		RULE_sentence = 8, RULE_basicFigures = 9, RULE_drawCircle = 10, RULE_drawSquare = 11, 
		RULE_drawEllipse = 12, RULE_drawRect = 13, RULE_drawLine = 14, RULE_drawPolyline = 15, 
		RULE_coordinate = 16, RULE_objectsLibElem = 17, RULE_rgbColor = 18, RULE_fill = 19, 
		RULE_stroke = 20, RULE_istyle = 21, RULE_shape = 22, RULE_circle = 23, 
		RULE_objsectsLibFunctions = 24, RULE_dotDraw = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"sourceFile", "importStatements", "libraries", "lib", "initialize", "canvas", 
			"point", "sentences", "sentence", "basicFigures", "drawCircle", "drawSquare", 
			"drawEllipse", "drawRect", "drawLine", "drawPolyline", "coordinate", 
			"objectsLibElem", "rgbColor", "fill", "stroke", "istyle", "shape", "circle", 
			"objsectsLibFunctions", "dotDraw"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'from'", "'import'", "'Graphica'", "'new'", "'Basic'", "'Objects'", 
			"'begin'", "'graph'", "'Coordinate'", "'Circle'", "'Fill'", "'RGB'", 
			"'Stroke'", null, "'IStyle'", "'circle'", "'rectangle'", "'square'", 
			"'ellipse'", "'line'", "'polyline'", "'draw'", "'('", "')'", "'{'", "'}'", 
			"','", "'.'", "';'", "'='", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "From", "Import", "Graphica", "New", "Basic", "Objects", "Begin", 
			"Graph", "Coordinates", "Obj_Circle", "Fill", "RGB", "Stroke", "FillType", 
			"IStyle", "Circle", "Rectangle", "Square", "Ellipse", "Line", "Polyline", 
			"Draw", "L_Paren", "R_Paren", "L_Curly", "R_Curly", "Comma", "Period", 
			"Semicolon", "Assign", "Quote", "NL", "WS", "COMMENT", "LINE_COMMENT", 
			"Integer", "Double", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GraphicaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphicaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceFileContext extends ParserRuleContext {
		public InitializeContext initialize() {
			return getRuleContext(InitializeContext.class,0);
		}
		public List<ImportStatementsContext> importStatements() {
			return getRuleContexts(ImportStatementsContext.class);
		}
		public ImportStatementsContext importStatements(int i) {
			return getRuleContext(ImportStatementsContext.class,i);
		}
		public List<CoordinateContext> coordinate() {
			return getRuleContexts(CoordinateContext.class);
		}
		public CoordinateContext coordinate(int i) {
			return getRuleContext(CoordinateContext.class,i);
		}
		public SourceFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceFile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitSourceFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceFileContext sourceFile() throws RecognitionException {
		SourceFileContext _localctx = new SourceFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sourceFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(52);
				importStatements();
				}
				}
				setState(55); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==From );
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Coordinates) {
				{
				{
				setState(57);
				coordinate();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			initialize();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementsContext extends ParserRuleContext {
		public TerminalNode From() { return getToken(GraphicaParser.From, 0); }
		public TerminalNode Graphica() { return getToken(GraphicaParser.Graphica, 0); }
		public TerminalNode Import() { return getToken(GraphicaParser.Import, 0); }
		public TerminalNode L_Curly() { return getToken(GraphicaParser.L_Curly, 0); }
		public LibrariesContext libraries() {
			return getRuleContext(LibrariesContext.class,0);
		}
		public TerminalNode R_Curly() { return getToken(GraphicaParser.R_Curly, 0); }
		public ImportStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitImportStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementsContext importStatements() throws RecognitionException {
		ImportStatementsContext _localctx = new ImportStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatements);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(From);
			setState(66);
			match(Graphica);
			setState(67);
			match(Import);
			setState(68);
			match(L_Curly);
			setState(69);
			libraries();
			setState(70);
			match(R_Curly);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LibrariesContext extends ParserRuleContext {
		public List<LibContext> lib() {
			return getRuleContexts(LibContext.class);
		}
		public LibContext lib(int i) {
			return getRuleContext(LibContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(GraphicaParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(GraphicaParser.Comma, i);
		}
		public LibrariesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_libraries; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitLibraries(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LibrariesContext libraries() throws RecognitionException {
		LibrariesContext _localctx = new LibrariesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_libraries);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			lib();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(73);
				match(Comma);
				setState(74);
				lib();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LibContext extends ParserRuleContext {
		public TerminalNode Basic() { return getToken(GraphicaParser.Basic, 0); }
		public TerminalNode Objects() { return getToken(GraphicaParser.Objects, 0); }
		public LibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lib; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitLib(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LibContext lib() throws RecognitionException {
		LibContext _localctx = new LibContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lib);
		int _la;
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Basic:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				match(Basic);
				}
				break;
			case Objects:
			case R_Curly:
			case Comma:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Objects) {
					{
					setState(81);
					match(Objects);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitializeContext extends ParserRuleContext {
		public TerminalNode Begin() { return getToken(GraphicaParser.Begin, 0); }
		public TerminalNode Period() { return getToken(GraphicaParser.Period, 0); }
		public TerminalNode Graph() { return getToken(GraphicaParser.Graph, 0); }
		public CanvasContext canvas() {
			return getRuleContext(CanvasContext.class,0);
		}
		public TerminalNode L_Curly() { return getToken(GraphicaParser.L_Curly, 0); }
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public TerminalNode R_Curly() { return getToken(GraphicaParser.R_Curly, 0); }
		public InitializeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialize; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitInitialize(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitializeContext initialize() throws RecognitionException {
		InitializeContext _localctx = new InitializeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_initialize);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(Begin);
			setState(87);
			match(Period);
			setState(88);
			match(Graph);
			setState(89);
			canvas();
			setState(90);
			match(L_Curly);
			setState(91);
			sentences();
			setState(92);
			match(R_Curly);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CanvasContext extends ParserRuleContext {
		public TerminalNode L_Paren() { return getToken(GraphicaParser.L_Paren, 0); }
		public TerminalNode R_Paren() { return getToken(GraphicaParser.R_Paren, 0); }
		public List<TerminalNode> Integer() { return getTokens(GraphicaParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(GraphicaParser.Integer, i);
		}
		public TerminalNode Comma() { return getToken(GraphicaParser.Comma, 0); }
		public CanvasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_canvas; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitCanvas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CanvasContext canvas() throws RecognitionException {
		CanvasContext _localctx = new CanvasContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_canvas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(L_Paren);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Integer) {
				{
				setState(95);
				match(Integer);
				setState(96);
				match(Comma);
				setState(97);
				match(Integer);
				}
			}

			setState(100);
			match(R_Paren);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PointContext extends ParserRuleContext {
		public TerminalNode L_Paren() { return getToken(GraphicaParser.L_Paren, 0); }
		public List<TerminalNode> Integer() { return getTokens(GraphicaParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(GraphicaParser.Integer, i);
		}
		public TerminalNode Comma() { return getToken(GraphicaParser.Comma, 0); }
		public TerminalNode R_Paren() { return getToken(GraphicaParser.R_Paren, 0); }
		public PointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_point; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitPoint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PointContext point() throws RecognitionException {
		PointContext _localctx = new PointContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_point);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(L_Paren);
			setState(103);
			match(Integer);
			setState(104);
			match(Comma);
			setState(105);
			match(Integer);
			setState(106);
			match(R_Paren);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentencesContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<ObjectsLibElemContext> objectsLibElem() {
			return getRuleContexts(ObjectsLibElemContext.class);
		}
		public ObjectsLibElemContext objectsLibElem(int i) {
			return getRuleContext(ObjectsLibElemContext.class,i);
		}
		public SentencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentences; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitSentences(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentencesContext sentences() throws RecognitionException {
		SentencesContext _localctx = new SentencesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sentences);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Draw) {
				{
				{
				setState(108);
				sentence();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274877955072L) != 0)) {
				{
				{
				setState(114);
				objectsLibElem();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public TerminalNode Draw() { return getToken(GraphicaParser.Draw, 0); }
		public TerminalNode Period() { return getToken(GraphicaParser.Period, 0); }
		public List<BasicFiguresContext> basicFigures() {
			return getRuleContexts(BasicFiguresContext.class);
		}
		public BasicFiguresContext basicFigures(int i) {
			return getRuleContext(BasicFiguresContext.class,i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(Draw);
			setState(121);
			match(Period);
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				basicFigures();
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4128768L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BasicFiguresContext extends ParserRuleContext {
		public DrawSquareContext drawSquare() {
			return getRuleContext(DrawSquareContext.class,0);
		}
		public DrawCircleContext drawCircle() {
			return getRuleContext(DrawCircleContext.class,0);
		}
		public DrawEllipseContext drawEllipse() {
			return getRuleContext(DrawEllipseContext.class,0);
		}
		public DrawRectContext drawRect() {
			return getRuleContext(DrawRectContext.class,0);
		}
		public DrawLineContext drawLine() {
			return getRuleContext(DrawLineContext.class,0);
		}
		public DrawPolylineContext drawPolyline() {
			return getRuleContext(DrawPolylineContext.class,0);
		}
		public BasicFiguresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicFigures; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitBasicFigures(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicFiguresContext basicFigures() throws RecognitionException {
		BasicFiguresContext _localctx = new BasicFiguresContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_basicFigures);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Square:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				drawSquare();
				}
				break;
			case Circle:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				drawCircle();
				}
				break;
			case Ellipse:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				drawEllipse();
				}
				break;
			case Rectangle:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				drawRect();
				}
				break;
			case Line:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				drawLine();
				}
				break;
			case Polyline:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				drawPolyline();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DrawCircleContext extends ParserRuleContext {
		public TerminalNode Circle() { return getToken(GraphicaParser.Circle, 0); }
		public TerminalNode L_Paren() { return getToken(GraphicaParser.L_Paren, 0); }
		public TerminalNode R_Paren() { return getToken(GraphicaParser.R_Paren, 0); }
		public TerminalNode Semicolon() { return getToken(GraphicaParser.Semicolon, 0); }
		public List<TerminalNode> Integer() { return getTokens(GraphicaParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(GraphicaParser.Integer, i);
		}
		public List<TerminalNode> Comma() { return getTokens(GraphicaParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(GraphicaParser.Comma, i);
		}
		public TerminalNode ID() { return getToken(GraphicaParser.ID, 0); }
		public PointContext point() {
			return getRuleContext(PointContext.class,0);
		}
		public DrawCircleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drawCircle; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitDrawCircle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DrawCircleContext drawCircle() throws RecognitionException {
		DrawCircleContext _localctx = new DrawCircleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_drawCircle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(Circle);
			setState(136);
			match(L_Paren);
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Integer:
				{
				{
				setState(137);
				match(Integer);
				setState(138);
				match(Comma);
				setState(139);
				match(Integer);
				setState(140);
				match(Comma);
				setState(141);
				match(Integer);
				}
				}
				break;
			case ID:
				{
				{
				setState(142);
				match(ID);
				setState(143);
				match(Comma);
				setState(144);
				match(Integer);
				}
				}
				break;
			case L_Paren:
				{
				{
				setState(145);
				point();
				setState(146);
				match(Comma);
				setState(147);
				match(Integer);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(151);
			match(R_Paren);
			setState(152);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DrawSquareContext extends ParserRuleContext {
		public TerminalNode Square() { return getToken(GraphicaParser.Square, 0); }
		public TerminalNode L_Paren() { return getToken(GraphicaParser.L_Paren, 0); }
		public TerminalNode R_Paren() { return getToken(GraphicaParser.R_Paren, 0); }
		public TerminalNode Semicolon() { return getToken(GraphicaParser.Semicolon, 0); }
		public List<TerminalNode> Integer() { return getTokens(GraphicaParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(GraphicaParser.Integer, i);
		}
		public List<TerminalNode> Comma() { return getTokens(GraphicaParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(GraphicaParser.Comma, i);
		}
		public TerminalNode ID() { return getToken(GraphicaParser.ID, 0); }
		public PointContext point() {
			return getRuleContext(PointContext.class,0);
		}
		public DrawSquareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drawSquare; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicaParserVisitor ) return ((GraphicaParserVisitor<? extends T>)visitor).visitDrawSquare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DrawSquareContext drawSquare() throws RecognitionException {
		DrawSquareContext _localctx = new DrawSquareContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_drawSquare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(Square);
			setState(155);
			match(L_Paren);
			setState(168);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Integer:
				{
				{
				setState(156);
				match(Integer);
				setState(157);
				match(Comma);
				setState(158);
				match(Integer);
				setState(159);
				match(Comma);
				setState(160);
				match(Integer);
				}
				}
				break;
			case ID:
				{
				{
				setState(161);
				match(ID);
				setState(162);
				match(Comma);
				setState(163);
				match(Integer);
				}
				}
				break;
			case L_Paren:
				{
				{
				setState(164);
				point();
				setState(165);
				match(Comma);
				setState(166);
				match(Integer);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(170);
			match(R_Paren);
			setState(171);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
